--- a/mPhoto/Base.lproj/Main.storyboard
+++ b/mPhoto/Base.lproj/Main.storyboard
@@ -60,13 +60,27 @@
         <!--Photo Detail-->
         <scene sceneID="joQ-aB-SnM">
             <objects>
-                <viewController title="Photo Detail" id="ivP-gM-zhM" sceneMemberID="viewController">
+                <viewController title="Photo Detail" id="ivP-gM-zhM" customClass="PhotoDetailViewController" customModule="mPhoto" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="WEH-ux-rPW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="j5g-n9-IPZ">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="j5g-n9-IPZ" firstAttribute="bottom" secondItem="Ybo-qB-3N0" secondAttribute="bottom" id="eu0-7C-XyA"/>
+                            <constraint firstItem="j5g-n9-IPZ" firstAttribute="top" secondItem="Ybo-qB-3N0" secondAttribute="top" id="fhI-DW-VQ3"/>
+                            <constraint firstItem="j5g-n9-IPZ" firstAttribute="trailing" secondItem="Ybo-qB-3N0" secondAttribute="trailing" id="vcm-0u-sHw"/>
+                            <constraint firstItem="j5g-n9-IPZ" firstAttribute="leading" secondItem="Ybo-qB-3N0" secondAttribute="leading" id="xct-x7-h9A"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Ybo-qB-3N0"/>
                     </view>
+                    <connections>
+                        <outlet property="imageVIew" destination="j5g-n9-IPZ" id="DG3-yV-m2x"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="egP-wW-iXw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
