--- a/mPhoto/Base.lproj/Main.storyboard
+++ b/mPhoto/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Albums Collection View Controller-->
+        <!--Albums-->
         <scene sceneID="asF-zN-oEx">
             <objects>
                 <collectionViewController id="e1d-uL-RU2" customClass="AlbumsCollectionViewController" customModule="mPhoto" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,27 +19,52 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="GPo-2b-GG0">
-                            <size key="itemSize" width="126" height="92"/>
+                            <size key="itemSize" width="289" height="301"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="7W2-09-qnm" customClass="PhotoCollectionCell" customModule="mPhoto" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="126" height="92"/>
+                                <rect key="frame" x="62.5" y="0.0" width="289" height="301"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="126" height="92"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="289" height="301"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="101" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4RV-hT-1gB">
-                                            <rect key="frame" x="20" y="10" width="86" height="68"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="101" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4RV-hT-1gB">
+                                            <rect key="frame" x="8" y="8" width="273" height="219"/>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pL2-Xw-RHc">
+                                            <rect key="frame" x="16" y="264" width="257" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QUw-UM-Hv8">
+                                            <rect key="frame" x="16" y="235" width="257" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                 </view>
+                                <constraints>
+                                    <constraint firstAttribute="bottomMargin" secondItem="pL2-Xw-RHc" secondAttribute="bottom" constant="8" id="D3s-lc-bmq"/>
+                                    <constraint firstItem="QUw-UM-Hv8" firstAttribute="leading" secondItem="7W2-09-qnm" secondAttribute="leadingMargin" constant="8" id="Vaf-Tn-Jnw"/>
+                                    <constraint firstItem="pL2-Xw-RHc" firstAttribute="top" secondItem="QUw-UM-Hv8" secondAttribute="bottom" constant="8" id="YyC-Ex-m4j"/>
+                                    <constraint firstAttribute="trailing" secondItem="4RV-hT-1gB" secondAttribute="trailing" constant="8" id="aAO-33-dA9"/>
+                                    <constraint firstItem="4RV-hT-1gB" firstAttribute="leading" secondItem="7W2-09-qnm" secondAttribute="leading" constant="8" id="bU9-eW-kBF"/>
+                                    <constraint firstItem="QUw-UM-Hv8" firstAttribute="top" secondItem="4RV-hT-1gB" secondAttribute="bottom" constant="8" id="evZ-95-YhB"/>
+                                    <constraint firstItem="pL2-Xw-RHc" firstAttribute="leading" secondItem="7W2-09-qnm" secondAttribute="leadingMargin" constant="8" id="kOV-Re-3Sh"/>
+                                    <constraint firstItem="4RV-hT-1gB" firstAttribute="top" secondItem="7W2-09-qnm" secondAttribute="top" constant="8" id="mtm-0N-fNh"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="pL2-Xw-RHc" secondAttribute="trailing" constant="8" id="uDo-8P-JsX"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="QUw-UM-Hv8" secondAttribute="trailing" constant="8" id="v0G-1f-BMX"/>
+                                </constraints>
                                 <connections>
+                                    <outlet property="countLabel" destination="pL2-Xw-RHc" id="RD6-ts-3i2"/>
                                     <outlet property="imageView" destination="4RV-hT-1gB" id="njB-Rl-rt5"/>
+                                    <outlet property="titleLabel" destination="QUw-UM-Hv8" id="ZvF-DD-QN7"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
@@ -48,7 +73,7 @@
                             <outlet property="delegate" destination="e1d-uL-RU2" id="85z-Ac-Xgm"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="CI1-xl-4JD"/>
+                    <navigationItem key="navigationItem" title="Albums" id="CI1-xl-4JD"/>
                     <connections>
                         <segue destination="ivP-gM-zhM" kind="show" identifier="showPhotoDetail" id="85p-Cj-xae"/>
                     </connections>
