--- a/mPhoto/Base.lproj/Main.storyboard
+++ b/mPhoto/Base.lproj/Main.storyboard
@@ -79,7 +79,13 @@
                             <outlet property="delegate" destination="e1d-uL-RU2" id="85z-Ac-Xgm"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="Albums" id="CI1-xl-4JD"/>
+                    <navigationItem key="navigationItem" title="Albums" id="CI1-xl-4JD">
+                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="jFg-Xf-QwN">
+                            <connections>
+                                <action selector="refresh:" destination="e1d-uL-RU2" id="f3A-ZI-242"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <segue destination="SA3-D1-UjC" kind="show" identifier="showPhotos" id="spS-cf-tc6"/>
                     </connections>
