--- a/mPhoto/Base.lproj/Main.storyboard
+++ b/mPhoto/Base.lproj/Main.storyboard
@@ -33,16 +33,16 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="101" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4RV-hT-1gB">
-                                            <rect key="frame" x="8" y="8" width="156" height="126"/>
+                                            <rect key="frame" x="8" y="8" width="156" height="134"/>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pL2-Xw-RHc">
-                                            <rect key="frame" x="16" y="171" width="140" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <rect key="frame" x="16" y="175" width="140" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Album" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QUw-UM-Hv8">
-                                            <rect key="frame" x="16" y="142" width="140" height="21"/>
+                                            <rect key="frame" x="16" y="150" width="140" height="21"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -57,7 +57,7 @@
                                     <constraint firstItem="1jl-oy-GCI" firstAttribute="centerX" secondItem="7W2-09-qnm" secondAttribute="centerX" id="Ljm-ic-wec"/>
                                     <constraint firstItem="1jl-oy-GCI" firstAttribute="centerY" secondItem="7W2-09-qnm" secondAttribute="centerY" id="Mde-JM-pO5"/>
                                     <constraint firstItem="QUw-UM-Hv8" firstAttribute="leading" secondItem="7W2-09-qnm" secondAttribute="leadingMargin" constant="8" id="Vaf-Tn-Jnw"/>
-                                    <constraint firstItem="pL2-Xw-RHc" firstAttribute="top" secondItem="QUw-UM-Hv8" secondAttribute="bottom" constant="8" id="YyC-Ex-m4j"/>
+                                    <constraint firstItem="pL2-Xw-RHc" firstAttribute="top" secondItem="QUw-UM-Hv8" secondAttribute="bottom" constant="4" id="YyC-Ex-m4j"/>
                                     <constraint firstAttribute="trailing" secondItem="4RV-hT-1gB" secondAttribute="trailing" constant="8" id="aAO-33-dA9"/>
                                     <constraint firstItem="4RV-hT-1gB" firstAttribute="leading" secondItem="7W2-09-qnm" secondAttribute="leading" constant="8" id="bU9-eW-kBF"/>
                                     <constraint firstItem="QUw-UM-Hv8" firstAttribute="top" secondItem="4RV-hT-1gB" secondAttribute="bottom" constant="8" id="evZ-95-YhB"/>
@@ -102,18 +102,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zIS-4r-lxR">
-                            <size key="itemSize" width="79" height="85"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Iik-lK-zfE">
+                            <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="dUH-Cf-9Kl" customClass="PhotoCollectionCell" customModule="mPhoto" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="79" height="85"/>
+                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="79" height="85"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sEI-y5-zO0">
