--- a/mPhoto/Base.lproj/Main.storyboard
+++ b/mPhoto/Base.lproj/Main.storyboard
@@ -79,13 +79,7 @@
                             <outlet property="delegate" destination="e1d-uL-RU2" id="85z-Ac-Xgm"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="Albums" id="CI1-xl-4JD">
-                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="jFg-Xf-QwN">
-                            <connections>
-                                <action selector="refresh:" destination="e1d-uL-RU2" id="f3A-ZI-242"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="Albums" id="CI1-xl-4JD"/>
                     <connections>
                         <segue destination="SA3-D1-UjC" kind="show" identifier="showPhotos" id="spS-cf-tc6"/>
                     </connections>
@@ -117,10 +111,10 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sEI-y5-zO0">
-                                            <rect key="frame" x="0.0" y="0.0" width="79" height="85"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         </imageView>
                                         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="4Ih-1I-iqF">
-                                            <rect key="frame" x="29.5" y="32.5" width="20" height="20"/>
+                                            <rect key="frame" x="15" y="15" width="20" height="20"/>
                                         </activityIndicatorView>
                                     </subviews>
                                 </view>
